<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gameofthronesquiz.QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/got"/>

        <TextView
            android:id="@+id/textView"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one" />

        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tyrell" />

            <RadioButton
                android:id="@+id/radioButton21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tully" />

            <RadioButton
                android:id="@+id/radioButton31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/martell" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_two" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/housetargaryen"/>


        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arryn" />

            <RadioButton
                android:id="@+id/radioButton22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bolton" />

            <RadioButton
                android:id="@+id/radioButton32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/targaryen" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_three" />
        <EditText
            android:id="@+id/edit"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:inputType="text"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_four" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qoute_lannister" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/qoute_ours" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qoute_hear" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_five" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/housemartell"/>


        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/greyjoy" />

            <RadioButton
                android:id="@+id/radioButton25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tyrell" />

            <RadioButton
                android:id="@+id/radioButton35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/martell" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_six" />

        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/walder" />

            <RadioButton
                android:id="@+id/radioButton26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roose" />

            <RadioButton
                android:id="@+id/radioButton36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sandor" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/question_seven" />

        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <RadioButton
                android:id="@+id/radioButton17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_growing" />

            <RadioButton
                android:id="@+id/radioButton27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_unbowed" />

            <RadioButton
                android:id="@+id/radioButton37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_fire" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"

            android:text="@string/question_eight" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/housestark"/>


        <RadioGroup
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_sun" />

            <RadioButton
                android:id="@+id/radioButton28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_high" />

            <RadioButton
                android:id="@+id/radioButton38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/qoute_winter" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="0dp"
                android:layout_margin="20dp"
                android:background="#A1887F"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="Submit"
                android:textColor="#ffffff"
                android:text="@string/submit" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="0dp"
                android:layout_margin="20dp"
                android:background="#A1887F"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>