<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.gameofthronesquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/got"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/stranger"
            android:layout_width="match_parent"
            android:inputType="text"/>


        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="#A1887F"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:text="@string/start" />


    </LinearLayout>
</ScrollView>